--- a/locations-spring-solution/movie/pom.xml
+++ b/locations-spring-solution/movie/pom.xml
@@ -8,11 +8,11 @@
         <version>2.5.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.training360</groupId>
-    <artifactId>author</artifactId>
+    <groupId>com.training360</groupId>
+    <artifactId>movie</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>author</name>
-    <description>Author project for Spring Boot</description>
+    <name>movie</name>
+    <description>Movie project for Spring Boot</description>
     <properties>
         <java.version>16</java.version>
     </properties>
